Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignNumberIntObj.quorum
class Main
    action Main
        Integer i
        number num = 0.0
        i:SetValue(5)
        num = cast(number, i)
        if num = 5.0
            output "passed"
        end
    end
end